--- a/src/App.css
+++ b/src/App.css
@@ -813,10 +813,12 @@
     width: 100%;
     padding: 20px;
     border-radius: 24px;
-    justify-content: space-between;
+    justify-content: center;
     gap: 20px;
     margin-top: 0;
     top: 16px;
+    flex-wrap: wrap;
+    align-items: center;
   }
 
   .sidebar__nav,
@@ -827,13 +829,20 @@
   }
 
   .sidebar__nav {
-    flex: 1;
+    flex: 1 0 100%;
     flex-wrap: wrap;
     justify-content: center;
   }
 
   .sidebar__bottom {
-    justify-content: flex-end;
+    flex: 1 0 100%;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .sidebar__top {
+    width: 100%;
+    justify-content: center;
   }
 
   .sidebar__icon-button {
